# gblas-mlir

./: .gitignore  CMakeLists.txt  README.md  build_and_run.sh  build_and_run_bench.sh
algorithms/bfs/: bfs.mlir  bfs_distance.mlir  bfs_prev.mlir  issue.txt
algorithms/random_walk/: issue.txt  random_walk.mlir
algorithms/sssp/: issue.txt  sssp.mlir
algorithms/triangle_count/: issue.txt  triangle_count.mlir
include/: CMakeLists.txt
include/GBLAS/: GBLASDialect.h  GBLASDialect.td  GBLASOps.td  GBLASPasses.h  GBLASPasses.td
lib/: CMakeLists.txt
lib/GBLAS/: GBLASDialect.cpp  GBLASToLinalg.cpp
test/: bfs.mlir  bfs_benchmark.mlir  bfs_orig.cpp  build_and_mxm.mlir  example_mxm.mlir  main_bench.cpp  main_bfs_bench.cpp  randomwalk.mlir  randomwalk_benchmark.mlir  randomwalk_orig.cpp  run_test.txt  test.mlir  test_ewise.mlir  test_full_mult.mlir  test_gblas_dims.mlir  test_intersect.mlir  test_semirings.mlir  test_transpose.mlir  test_update_max.mlir  test_update_plus.mlir  test_update_sparse.mlir  to_run_test_update_sparse.txt  trianglecount.mlir  tricount_benchmark.mlir  tricount_orig.cpp  update_test.mlir
tools/: CMakeLists.txt
tools/gblas-opt/: gblas-opt.cpp
